creación de login primera parte

--- a/dominio/dominio.csproj
+++ b/dominio/dominio.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Entrenador.cs" />
     <Compile Include="Pokemon.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Trainee.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
