--- a/Pokemon-web/packages.config
+++ b/Pokemon-web/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net48" />
+  <package id="AspNet.ScriptManager.jQuery" version="3.6.0" targetFramework="net48" />
+  <package id="jQuery" version="3.6.0" targetFramework="net48" />
+  <package id="Microsoft.AspNet.ScriptManager.WebForms" version="5.0.0" targetFramework="net48" />
+  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="4.1.0-preview1" targetFramework="net48" />
 </packages>
